trunk/Archive2/2d/6d36c7e1b06d41/output
main.cpp:6:33: error: function template partial specialization 'fun<T, int>' is not allowed
 template<int T> int fun<T, int>() { return T; }
                                 ^
